Changes for Venice, 0.8 alpha ??/???/2006
=========================================

* Added support for downloading ASX quotes from float.com.au.

* Updates to Usability:
  - Now warns if you try to import wekeend stock quotes.
    Stock quotes on weekends are not yet supported.

* Watch screens are now saved as XML files in the user's home directory.
  This should make them easier to manage (e.g. backup).

* Bug Fixes:
  - Can now work with volumes greater than 2147483647.
  - Graphing from context menu in watch screen now works (bug #1328197).

Changes for Venice, 0.7 beta 17/Apr/2006
========================================

* Added multi-currency portfolio support (Andrew Leppard, Quentin Bossard)

* Added support for currencies with greater than 100 subdivisions, e.g.
  Kuwaiti dinar which has 1,000 fils per dinar.

* Portfolios are now saved as XML files in the user's home directory.
  This should improve performance when loading and saving portfolios
  and make them easier to manage (e.g. backup).

* Internationalisation:
  - Catalan translation added (Jordi Pujol).

* Tuning:
  - HSQLDB databases are now stored in binary format and are no
    longer fully cached in memory. This should improve performance
    and reduce memory usage.
  - Charting indicators, such as Bollinger Bands, is now much faster.

* Library updates:
  - HSQLDB V1.8.0.4 from 1.8.0.2
  - MySQL Connector/J V3.1.12 from 3.1.11.

* Bug Fixes:
   - User drawn lines now scale properly when graph is resized (Mark Hummel).

Changes for Venice, 0.6 beta 23/Oct/2005
========================================

* Added basic intra-day quote support.

* Updates to Gondola Language:
  - Performance improvements due to stronger internal typing
    (Alberto Nacher).
  - Added sin() (Alberto Nacher).
  - Added cos() (Alberto Nacher).
  - Added log() (Alberto Nacher).
  - Added exp() (Alberto Nacher).

* Updates to Paper Trade:
  - The current capital, number of transactions and start of paper trade