@@ -44,10 +44,10 @@ in Venice. For charting see <link to="Graphs">Graphs</link>.
 </para>
 </help>
 
-<text>Merchant of Venice, 0.8 alpha / ??/???/2006
-============================================
+<text>Merchant of Venice, 0.71 beta / 25/Feb/2007
+===========================================
 
-Copyright (C) 2003-6, Andrew Leppard (aleppard picknowl com au)
+Copyright (C) 2003-7, Andrew Leppard (aleppard picknowl com au)
 See COPYING.txt for license terms.
 
 </text>
